# rcal

./: .SRCINFO  .gitignore  AGENTS.md  BUG_TEST_EVENT_REPOSITORY_UPDATE.md  CHANGELOG.md  Cargo.toml  EVENT_FORMAT.md  PKGBUILD  README.md  TODO.md  coverage.sh  rcal.service  todo.md
coverage-baseline/html/: index.html
coverage-report/html/: index.html
openspec/: AGENTS.md  config.yaml  project.md
openspec/changes/archive/2025-11-08-2025-11-08-remove-sync-status-keybind-instruction/: proposal.md  tasks.md
openspec/changes/archive/2025-11-08-add-additional-agent-specs/: proposal.md  tasks.md
openspec/changes/archive/2025-11-08-add-agent-guidelines-specs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-08-auto-update-sync-status-on-popup-entry/: proposal.md  tasks.md
openspec/changes/archive/2025-11-08-change-cursor-navigation-view-shifting/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-08-expand-calendar-view-to-three-months/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-08-remove-duplicate-up-to-date-sync-popup/: proposal.md  tasks.md
openspec/changes/archive/2025-11-08-remove-hl-navigation/: proposal.md  tasks.md
openspec/changes/implement-lazy-loading-recurring-events/: proposal.md  tasks.md
openspec/specs/accessibility/: spec.md
openspec/specs/build-tools/: spec.md
openspec/specs/code-style/: spec.md
openspec/specs/development-workflow/: spec.md
openspec/specs/error-handling/: spec.md
openspec/specs/event-management/: spec.md
openspec/specs/packaging/: spec.md
openspec/specs/performance-guidelines/: spec.md
openspec/specs/security-guidelines/: spec.md
openspec/specs/synchronization/: spec.md
openspec/specs/test-coverage/: spec.md
openspec/specs/testing-framework/: spec.md
openspec/specs/tui-architecture/: spec.md
openspec/specs/ui-rendering/: spec.md
rcal-lib/: Cargo.toml  README.md
rcal-lib/src/: lib.rs  validation.rs
rcal-lib/src/core/: date_utils.rs  event_service.rs  mod.rs
rcal-lib/src/models/: calendar_event.rs  mod.rs  sync_status.rs
rcal-lib/src/notifications/: daemon.rs  mod.rs
rcal-lib/src/storage/: file_storage.rs  mod.rs  traits.rs
rcal-lib/src/sync/: git_sync.rs  mod.rs  traits.rs
src/: app.rs  daemon.rs  date_utils.rs  event_handling.rs  lib.rs  main.rs  persistence.rs  sync.rs  ui.rs
tests/: integration_test.rs
(+93 files in other folders)
