[package]
name = "rcal"
version = "1.0.0"
edition = "2024"

[lib]
name = "rcal"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0"
notify = "6.1"
notify-rust = "4.10"
ratatui = "0.26.1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
toml = "0.8"
