[workspace]
members = ["rcal-lib"]

[package]
name = "rcal"
version = "1.4.0"
edition = "2021"

[lib]
name = "rcal"
path = "src/lib.rs"

[dependencies]
rcal-lib = { path = "rcal-lib" }
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0"
lazy_static = "1.5"
notify = "8.2"
notify-rust = "4.12"
ratatui = "0.30.0"
regex = "1.12"
toml = "1.0"
uuid = { version = "1.22", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27"
toml = "1.0"
