[package]
name = "rcal-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"
thiserror = "1.0"
regex = "1.10"
lazy_static = "1.4"

[features]
default = []
desktop-notifications = []

[target.'cfg(target_os = "linux")'.dependencies]
notify = { version = "6.1", optional = true }
notify-rust = { version = "4.10", optional = true }

[dev-dependencies]
tempfile = "3.0"
