[package]
name = "rcal-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.22", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6.0"
thiserror = "2.0"
regex = "1.12"
lazy_static = "1.5"

[features]
default = []
desktop-notifications = []

[target.'cfg(target_os = "linux")'.dependencies]
notify = { version = "8.2", optional = true }
notify-rust = { version = "4.12", optional = true }

[dev-dependencies]
tempfile = "3.27"
